compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__no_body.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: Int) -> Int\n"
---
----- SOURCE CODE

@external(erlang, "one", "one")
pub fn one(x: Int) -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([one/1]).

-spec one(integer()) -> integer().
one(X) ->
    one:one(X).
