compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__public_elixir.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"Elixir.String\", \"main\")\npub fn do() -> Int\n"
---
----- SOURCE CODE

@external(erlang, "Elixir.String", "main")
pub fn do() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([do/0]).

-spec do() -> integer().
do() ->
    'Elixir.String':main().
